--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "react": "^16.4.1",
         "react-bootstrap": "^0.32.1",
-        "react-dom": "^16.4.1"
+        "react-dom": "^16.4.1",
+        "react-router-dom": "^4.3.1",
+        "styled-components": "^3.3.3"
     }
 }
